Refactor get(0) replaced with 'getFirst()' call